--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,9 @@
 ---
-title: "Homework 11: SQL Island"
+title: "Homework: SQL Island"
+execute:
+  error: true
 author: "Your Name"
-format: html
+output: html_document
 ---
 
 Note: This is almost a direct transcript of a game available at https://sql-island.informatik.uni-kl.de/.
